--- a/explorer/src/scss/_solana.scss
+++ b/explorer/src/scss/_solana.scss
@@ -256,6 +256,10 @@ ul.tree li:last-child:before {
   border-left: thin solid #808080;
 }
 
+div.inner-cards {
+  margin: 1.5rem;
+}
+
 // work around for https://github.com/JedWatson/react-select/issues/3857
 .search-bar__input {
   width: 100% !important;
