explorer: change spam to scam

--- a/explorer/src/scss/_solana.scss
+++ b/explorer/src/scss/_solana.scss
@@ -327,7 +327,7 @@ div.inner-cards {
   overflow-y: auto;
 }
 
-.container.is-spam .alert-danger {
+.container.is-scam .alert-danger {
   background: red;
   border: 1px solid red;
 }
