explorer: no need for this to be a prop now

--- a/explorer/src/scss/_solana.scss
+++ b/explorer/src/scss/_solana.scss
@@ -327,7 +327,7 @@ div.inner-cards {
   overflow-y: auto;
 }
 
-.container.is-scam .alert-danger {
+.alert-danger.alert-scam {
   background: red;
   border: 1px solid red;
 }
